--- a/index.html
+++ b/index.html
@@ -1,76 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Gold Medal Funding</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    /* Extra styling for buttons & cards */
-    .btn-primary { background-color: #0B2C4D; color: white; padding: 12px 28px; border-radius: 8px; font-weight: 600; transition: all 0.3s; }
-    .btn-primary:hover { background-color: #0D3B63; }
-    .btn-secondary { background-color: #C9A227; color: #0B2C4D; padding: 12px 28px; border-radius: 8px; font-weight: 600; transition: all 0.3s; }
-    .btn-secondary:hover { background-color: #b7951e; }
-    .card { background-color: white; border-radius: 12px; box-shadow: 0 8px 20px rgba(0,0,0,0.08); padding: 24px; transition: all 0.3s; }
-    .card:hover { transform: translateY(-5px); box-shadow: 0 12px 25px rgba(0,0,0,0.12); }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Gold Medal Funding</title>
+<script src="https://cdn.tailwindcss.com"></script>
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<style>
+body { font-family: 'Helvetica', sans-serif; scroll-behavior: smooth; }
+
+/* Buttons */
+.btn-gold {
+  background-color: #C9A227;
+  color: #000000;
+  font-weight: bold;
+  padding: 12px 28px;
+  border-radius: 8px;
+  position: relative;
+  overflow: hidden;
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+.btn-gold:hover {
+  transform: scale(1.05);
+  box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+}
+
+/* Ripple Effect */
+.btn-gold::after {
+  content: '';
+  position: absolute;
+  width: 100px; height: 100px;
+  background: rgba(255,255,255,0.3);
+  border-radius: 50%;
+  transform: scale(0);
+  opacity: 0;
+  pointer-events: none;
+  transition: transform 0.6s, opacity 1s;
+}
+.btn-gold:active::after {
+  transform: scale(4);
+  opacity: 1;
+  transition: 0s;
+}
+
+/* Cards */
+.card {
+  background-color: #FFFFFF;
+  border-radius: 12px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+  padding: 24px;
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+.card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 12px 25px rgba(0,0,0,0.12);
+}
+
+/* Hero background gradient animation */
+.hero-bg {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: linear-gradient(270deg, #C9A227, #FFFFFF, #000000);
+  background-size: 600% 600%;
+  animation: gradientBG 20s ease infinite;
+  z-index: -1;
+}
+@keyframes gradientBG {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+
+/* Floating WhatsApp Button */
+.whatsapp-btn {
+  position: fixed;
+  bottom: 24px;
+  right: 24px;
+  background-color: #25D366;
+  color: white;
+  padding: 16px 20px;
+  border-radius: 50px;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  text-decoration: none;
+  z-index: 1000;
+  transition: transform 0.3s;
+}
+.whatsapp-btn:hover { transform: scale(1.1); }
+
+/* Hero fade-in text */
+.fade-in {
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeInUp 1s forwards;
+}
+@keyframes fadeInUp {
+  to { opacity: 1; transform: translateY(0); }
+}
+
+/* Hero parallax */
+.hero-text { transform: translateY(0); transition: transform 0.2s; }
+
+/* Card slide-in */
+[data-aos="fade-left"] { opacity: 0; transform: translateX(-30px); transition: all 1s; }
+[data-aos="fade-right"] { opacity: 0; transform: translateX(30px); transition: all 1s; }
+[data-aos].aos-animate { opacity: 1; transform: translateX(0); }
+</style>
 </head>
 
-<body class="bg-white text-gray-800 font-sans">
+<body class="bg-white text-black relative">
 
-<!-- HEADER -->
-<header class="bg-[#0B2C4D] text-white shadow">
+<!-- Hero background -->
+<div class="hero-bg"></div>
+
+<!-- Header -->
+<header class="fixed top-0 left-0 w-full bg-white shadow z-50">
   <div class="max-w-6xl mx-auto p-6 flex justify-between items-center">
     <h1 class="text-2xl font-bold">Gold Medal Funding</h1>
-    <a href="#apply" class="btn-secondary">Apply Now</a>
+    <a href="#apply" class="btn-gold">Apply Now</a>
   </div>
 </header>
 
-<!-- HERO -->
-<section class="max-w-6xl mx-auto px-6 py-24 text-center">
-  <h2 class="text-5xl font-bold mb-6">Fast & Flexible Business Funding</h2>
-  <p class="text-lg mb-8">Working capital, lines of credit, and growth funding tailored for your business.</p>
-  <div class="flex justify-center gap-4">
-    <a href="#apply" class="btn-primary text-lg">Get Funded</a>
-    <a href="#apply" class="btn-secondary text-lg">Apply Now</a>
+<!-- Hero Section -->
+<section class="max-w-6xl mx-auto px-6 py-32 text-center relative z-10">
+  <h2 class="text-5xl font-bold mb-6 fade-in hero-text">Fast & Flexible Business Funding</h2>
+  <p class="text-lg mb-8 fade-in hero-text" style="animation-delay:0.3s;">Working capital, lines of credit, and growth funding tailored for your business.</p>
+  <div class="flex justify-center gap-4 fade-in hero-text" style="animation-delay:0.6s;">
+    <a href="#apply" class="btn-gold text-lg">Get Funded</a>
+    <a href="#apply" class="btn-gold text-lg">Apply Now</a>
   </div>
 </section>
 
-<!-- STEPS -->
-<section class="bg-[#F5F7FA] py-20">
-  <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-4 gap-8 text-center">
-    <div class="card">
-      <h3 class="font-bold text-xl mb-3">Apply</h3>
-      <p>Complete a quick online application in minutes.</p>
-    </div>
-    <div class="card">
-      <h3 class="font-bold text-xl mb-3">Submit Docs</h3>
-      <p>Upload bank statements and basic business info.</p>
-    </div>
-    <div class="card">
-      <h3 class="font-bold text-xl mb-3">Approval</h3>
-      <p>We match you with the best funding option.</p>
-    </div>
-    <div class="card">
-      <h3 class="font-bold text-xl mb-3">Funded</h3>
-      <p>Receive funds as fast as 24–48 hours.</p>
-    </div>
+<!-- Steps Section -->
+<section class="max-w-6xl mx-auto px-6 py-20 grid md:grid-cols-4 gap-8 text-center">
+  <div class="card" data-aos="fade-left" data-aos-delay="100">
+    <h3 class="font-bold text-xl mb-3">Apply</h3>
+    <p>Complete a quick online application in minutes.</p>
+  </div>
+  <div class="card" data-aos="fade-right" data-aos-delay="200">
+    <h3 class="font-bold text-xl mb-3">Submit Docs</h3>
+    <p>Upload bank statements and basic business info.</p>
+  </div>
+  <div class="card" data-aos="fade-left" data-aos-delay="300">
+    <h3 class="font-bold text-xl mb-3">Approval</h3>
+    <p>We match you with the best funding option.</p>
+  </div>
+  <div class="card" data-aos="fade-right" data-aos-delay="400">
+    <h3 class="font-bold text-xl mb-3">Funded</h3>
+    <p>Receive funds as fast as 24–48 hours.</p>
   </div>
 </section>
 
-<!-- APPLY FORM (JotForm) -->
-<section id="apply" class="max-w-4xl mx-auto px-6 py-20">
-  <h2 class="text-3xl font-bold mb-8 text-center">Apply Now</h2>
-  <script src="https://form.jotform.com/jsform/242275281979065"></script>
+<!-- Apply Section -->
+<section id="apply" class="max-w-4xl mx-auto px-6 py-20 text-center" data-aos="fade-up">
+  <h2 class="text-3xl font-bold mb-6">Apply Now</h2>
+  <p class="mb-6">Click the button below to start your application process.</p>
+  <a href="https://form.jotform.com/242275281979065" target="_blank" class="btn-gold text-lg">Start Application</a>
 </section>
 
-<!-- FOOTER -->
-<footer class="bg-[#0B2C4D] text-white text-center p-8 mt-12">
+<!-- Footer -->
+<footer class="bg-black text-white text-center p-8 mt-12">
   <p class="mb-2 font-semibold">Gold Medal Funding</p>
   <p>© 2025 All rights reserved.</p>
 </footer>
 
+<!-- Floating WhatsApp -->
+<a href="https://wa.me/YOURNUMBER" target="_blank" class="whatsapp-btn">
+  <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" width="24" height="24">
+    <path d="M20.5 3.5a10 10 0 1 0-16.4 12.7L2 22l6-1.6A10 10 0 0 0 20.5 3.5zm-1.4 12.3c-.2.5-1.2 1.1-1.7 1.2s-1.1.2-1.5.1-.8-.2-1.2-.5-1-1-.9-1.3c.1-.3.6-.4.9-.7s.6-.5.9-.8c.3-.3.5-.5.6-.8s.1-.5 0-.7-.4-.3-.7-.5c-.3-.2-.6-.5-.9-.6s-.6-.2-1-.3-.7-.2-1-.3c-.3-.1-.6-.2-1-.3s-.8-.1-1.1 0-.5.1-.7.3-.2.3-.3.5c-.1.2-.1.5-.2.7s-.1.6 0 .9c.1.3.3.6.5.9s.4.6.7.8.5.5.8.7.5.3.8.5.6.2.9.3.6.1.9.1.7-.1 1-.2c.3-.1.6-.2.9-.3s.6-.2.8-.3c.2-.1.3-.1.5 0 .1 0 .2.1.3.2.1.1.1.3.1.5z"/>
+  </svg>
+  Chat
+</a>
+
+<script>
+  AOS.init({ duration: 1000, once: true });
+
+  // Hero parallax
+  const heroText = document.querySelectorAll('.hero-text');
+  window.addEventListener('scroll', () => {
+    let scroll = window.scrollY;
+    heroText.forEach(el => {
+      el.style.transform = `translateY(${scroll * 0.2}px)`;
+    });
+  });
+</script>
+
 </body>
 </html>
+
 
 
